infrastructure/staging/wireguard/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vpn-webui
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: http
    namespace: traefik-gateway
    kind: Gateway
  - name: traefik-gateway
    sectionName: https
    namespace: traefik-gateway
    kind: Gateway
  hostnames:
  - vpn.robertharte.home
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: vpn-webui
      port: 80
